--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^15.1.4",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
@@ -25,11 +26,12 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
+    "@types/tailwindcss": "^3.0.11",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.4",
-    "postcss": "^8",
+    "postcss": "^8.4.49",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
