admin panel added

--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@next/bundle-analyzer": "^15.1.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "framer-motion": "^11.17.0",
-    "mongoose": "^8.9.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
     "next": "^15.1.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "techcom-saas-landing-page": "file:",
     "twin.macro": "^3.4.1"
   },
